src/objects/Compliance__c.object
<CustomObject>
    <description>Initial Certification and Re-certification details for Rentals; and Verification details for Ownership.</description>
    <fields>
        <fullName>AMI_at_Initial_Certification__c</fullName>
        <label>AMI % at Initial Certification</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AMI_at_Re_Certification__c</fullName>
        <label>AMI% at Re-Certification</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Certification_Due_By_Date__c</fullName>
        <label>Certification Due By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Residence_Exception__c</fullName>
        <formula>IF(ISPICKVAL(Currently_reside_as_owner_occupant__c,&quot;No&quot;),&quot;Not Current Residence Alert&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Residence Exception</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year_Income_Limits__c</fullName>
        <label>Current Year Income Limits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currently_reside_as_owner_occupant__c</fullName>
        <inlineHelpText>I/We hereby certify that I/We currently reside as owner-occupant in this unit.</inlineHelpText>
        <label>Currently reside as owner-occupant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Income_Re_Certified__c</fullName>
        <label>Date Income Re-Certified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Next_Re_Certification__c</fullName>
        <label>Date Next Re-Certification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Development_Name__c</fullName>
        <formula>Housing_Application__r.Development_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Development Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Hardship_Exception__c</fullName>
        <formula>IF(ISPICKVAL(Financial_issues_behind_on_HOA_loan_pmts__c,&quot;Yes&quot;),&quot;Financial Hardship/Payment Difficulty Alert&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Hardship Exception</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_issues_behind_on_HOA_loan_pmts__c</fullName>
        <inlineHelpText>Are you currently experiencing financial hardship and having difficulty or behind on HOA or loan repayments?</inlineHelpText>
        <label>Financial issues/behind on HOA/loan pmts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hazard_Other_Insurance_Exception__c</fullName>
        <formula>IF(ISPICKVAL(Homeowner_s_Insurance_Paid_Current__c,&quot;No&quot;),&quot;Homeowner&apos;s Hazard/Other Insurance Alert&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hazard/Other Insurance Exception</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homeowner_s_Assoc_dues_Paid_Current__c</fullName>
        <inlineHelpText>I/We certify that Homeowner&apos;s Association dues have been paid and are current.</inlineHelpText>
        <label>Homeowner&apos;s Assoc. dues Paid &amp; Current</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Homeowner_s_Dues_Exception__c</fullName>
        <formula>IF(ISPICKVAL( Homeowner_s_Assoc_dues_Paid_Current__c ,&quot;No&quot;),&quot;Homeowner&apos;s Association Dues Alert&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Homeowner&apos;s Dues Exception</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homeowner_s_Insurance_Paid_Current__c</fullName>
        <inlineHelpText>I/We certify that Homeowner&apos;s Hazzard or other insurance for the property have been paid and policies are current.</inlineHelpText>
        <label>Homeowner&apos;s Insurance Paid &amp; Current</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Income_at_Move_In__c</fullName>
        <label>Household Income at Move In $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Household_Income_at_Re_Certification__c</fullName>
        <label>Household Income at Re-Certification $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Household_Income_exceeds_120_AMI__c</fullName>
        <formula>IF(RecordType.Name=&quot;Rental Initial Certification&quot;,
   IF(Household_Income_at_Move_In__c &gt; Current_Year_Income_Limits__c,
   &quot;Alert - Household Income at Move In is greater than Current Year Income Limits&quot;,
   &quot;&quot;),
   IF(RecordType.Name=&quot;Rental Re-Certification&quot;,
      IF(Household_Income_at_Re_Certification__c &gt; Current_Year_Income_Limits__c,
      &quot;Alert - Household Income at Re-Certification is greater than Current Year Income Limits&quot;,
      &quot;&quot;),
   &quot;&quot;)
)</formula>
        <inlineHelpText>For Rental Initial Certifications, alert if Household Income at Move In is greater than Current Year Income Limits.

For Rental Re-Certifications, alert if Household Income at Re-Certification is greater than Current Year Income Limits.</inlineHelpText>
        <label>Household Income exceeds 120% AMI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Size_appropriate_to_Unit__c</fullName>
        <formula>IF(Number_of_Bedrooms__c &gt; Number_of_Persons_in_Household__c,
&quot;Alert - Number of Bedrooms greater than Number of Persons in Household&quot;,
&quot;&quot;)</formula>
        <inlineHelpText>This alert field gives a warning when the Number of Bedrooms is greater than Number of Persons in Household</inlineHelpText>
        <label>Household Size appropriate to Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housing_Application__c</fullName>
        <description>Housing Application associated with this Certification / Recertification / Verification.</description>
        <inlineHelpText>Housing Application associated with this Certification / Recertification / Verification.</inlineHelpText>
        <label>Housing Application</label>
        <referenceTo>Housing_Application__c</referenceTo>
        <relationshipLabel>Compliance</relationshipLabel>
        <relationshipName>Housing_Re_Certifications_Verifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loan_Payments_Exception__c</fullName>
        <formula>IF(ISPICKVAL(Mortgage_Loan_Payments_Paid_Current__c,&quot;No&quot;),&quot;Mortgage Payments Paid/Current Alert&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Payments Exception</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Loan_Payments_Paid_Current__c</fullName>
        <inlineHelpText>I/We certify that mortgage loan payments have been paid and are current.</inlineHelpText>
        <label>Mortgage Loan Payments Paid &amp; Current</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_In_AMI__c</fullName>
        <formula>Housing_Application__r.Property_of_Interest__r.Maximum_AMI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value comes from the development&apos;s Maximum AMI% value.</inlineHelpText>
        <label>Move In AMI%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <label>Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_of_Rental_Subsidy__c</fullName>
        <label>Name of Rental Subsidy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Bedrooms__c</fullName>
        <label>Number of Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Persons_in_Household__c</fullName>
        <label>Number of Persons in Household</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Address__c</fullName>
        <label>Owner Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Name_s__c</fullName>
        <label>Owner Name(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Taxes_Paid_Current__c</fullName>
        <inlineHelpText>I/We certify that property taxes have been paid and are current.</inlineHelpText>
        <label>Property Taxes Paid &amp; Current</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remain_on_title_and_no_new_names_added__c</fullName>
        <inlineHelpText>I/We hereby certify that I/We remain on title to the property and no new names have been added to title since taking ownership.</inlineHelpText>
        <label>Remain on title and no new names added</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <label>Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subsidized_portion_of_rent__c</fullName>
        <label>Subsidized portion of rent $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxes_Payment_Exception__c</fullName>
        <formula>IF(ISPICKVAL(Property_Taxes_Paid_Current__c,&quot;No&quot;),&quot;Taxes Paid/Current Alert&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Payment Exception</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Name__c</fullName>
        <label>Tenant Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_portion_of_rent__c</fullName>
        <label>Tenant portion of rent $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Title_Exception__c</fullName>
        <formula>IF(ISPICKVAL(Remain_on_title_and_no_new_names_added__c,&quot;No&quot;),&quot;Remaining on Title to Property/New Names Added Alert&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Exception</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Rent__c</fullName>
        <label>Total Monthly Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Compliance</label>
    <nameField>
        <displayFormat>CN-{0}</displayFormat>
        <label>Compliance #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance</pluralLabel>
    <recordTypes>
        <fullName>Lender_Certification</fullName>
        <active>false</active>
        <label>Lender Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ownership_Verification</fullName>
        <active>true</active>
        <description>Ownership Housing Application - Verification History</description>
        <label>Ownership Verification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property_Agent_Tenancy_Certification</fullName>
        <active>false</active>
        <label>Property Agent Tenancy Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rental_Initial_Certification</fullName>
        <active>true</active>
        <description>Rental Housing Application - Initial Certification details</description>
        <label>Rental Initial Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rental_Re_Certification</fullName>
        <active>true</active>
        <description>Rental Housing Application - Re-Certification details</description>
        <label>Rental Re-Certification</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>